--- a/index.html
+++ b/index.html
@@ -1,77 +1,87 @@
 <html>
 
-	<head>
+<head>
 
-		<title>Violet Sinnarkar</title>
-		<link rel = "stylesheet" type = "text/css" href = "css/main.css">
+	<title>Violet Sinnarkar</title>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141113114-1"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
-		  gtag('config', 'UA-141113114-1');
-		</script>
 
-	</head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-YVBM251Y7B"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
 
-	<body>
+		gtag('config', 'G-YVBM251Y7B');
+	</script>
 
-		<h1>Violet Sinnarkar</h1>
 
-		<nav>
-    		<ul>
-	        			<li><a href="index.html" style="color: #8F5E99"><b>Home</b></a></li>
-					<li><a href="cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
-					<li><a href="poetry.html" style="color: #8F5E99">Poetry</a></li>
-					<li><a href="blog.html" style="color: #8F5E99">Blog</a></li>
-    		</ul>
-		</nav>
+</head>
+
+<body>
+
+	<h1>Violet Sinnarkar</h1>
+
+	<nav>
+		<ul>
+			<li><a href="index.html" style="color: #8F5E99"><b>Home</b></a></li>
+			<li><a href="cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
+			<li><a href="poetry.html" style="color: #8F5E99">Poetry</a></li>
+			<li><a href="blog.html" style="color: #8F5E99">Blog</a></li>
+		</ul>
+	</nav>
 
 	<p><img class="main_image" src="profile-2.jpg" /></p>
 
-	<p>I am a data scientist at Apple, focusing on applied statistical methods for experimentation and causal inference. I currently work on <a href = "https://tv.apple.com/" style="color: #8F5E99">Apple TV+</a>. My favorite shows are <i>Bad Sisters</i>, <i>Shrinking</i>, and <i>Lessons in Chemistry</i>.</p>
+	<p>I am a data scientist at Apple, focusing on applied statistical methods for experimentation and causal inference.
+		I currently work on <a href="https://tv.apple.com/" style="color: #8F5E99">Apple TV+</a>. My favorite shows are
+		<i>Bad Sisters</i>, <i>Shrinking</i>, and <i>Lessons in Chemistry</i>.</p>
 
-	<p>Before joining Apple, I worked at Uber and Lyft. I also earned an undergraduate degree from Berkeley, where I led the <a href = "debate.html" style="color: #8F5E99">debate</a> team and qualified to the World Universities Debating Championship.</p>
+	<p>Before joining Apple, I worked at Uber and Lyft. I also earned an undergraduate degree from Berkeley, where I led
+		the <a href="debate.html" style="color: #8F5E99">debate</a> team and qualified to the World Universities
+		Debating Championship.</p>
 
-	<p>In my free time, I enjoy <a href = "https://www.goodreads.com/user/show/7741912-violet" style="color: #8F5E99">reading</a>, <a href = "https://www.strava.com/athletes/71718313" style="color: #8F5E99">running</a>, and taking on various home improvement projects. You can contact me at violets [at] apple [dot] com. </p>
+	<p>In my free time, I enjoy <a href="https://www.goodreads.com/user/show/7741912-violet"
+			style="color: #8F5E99">reading</a>, <a href="https://www.strava.com/athletes/71718313"
+			style="color: #8F5E99">running</a>, and taking on various home improvement projects. You can contact me at
+		violets [at] apple [dot] com. </p>
 
-		<footer>
+	<footer>
 
-			<a href = "https://www.linkedin.com/in/vasinnarkar/" target="_blank">
-				<div class = "icon">
-					<object height = 25px width= 25px type="image/svg+xml" data="linkedin.svg">
-					</object>
-				</div>
-			</a>
+		<a href="https://www.linkedin.com/in/vasinnarkar/" target="_blank">
+			<div class="icon">
+				<object height=25px width=25px type="image/svg+xml" data="linkedin.svg">
+				</object>
+			</div>
+		</a>
 
-			<a href = "https://github.com/violetsinn" target="_blank">
-				<div class = "icon">
-					<object height = 25px width= 25px type="image/svg+xml" data="github.svg">
-					</object>
-				</div>
-			</a>
+		<a href="https://github.com/violetsinn" target="_blank">
+			<div class="icon">
+				<object height=25px width=25px type="image/svg+xml" data="github.svg">
+				</object>
+			</div>
+		</a>
 
-			<a href = "https://www.goodreads.com/user/show/7741912-violet" target="_blank">
-				<div class = "icon">
-					<object height = 25px width= 25px type="image/svg+xml" data="goodreads.png">
-					</object>
-				</div>
-			</a>
+		<a href="https://www.goodreads.com/user/show/7741912-violet" target="_blank">
+			<div class="icon">
+				<object height=25px width=25px type="image/svg+xml" data="goodreads.png">
+				</object>
+			</div>
+		</a>
 
 
-			<a href = "https://www.strava.com/athletes/71718313" target="_blank">
-				<div class = "icon">
-					<object height = 25px width= 25px type="image/svg+xml" data="strava.svg">
-					</object>
-				</div>
-			</a>
+		<a href="https://www.strava.com/athletes/71718313" target="_blank">
+			<div class="icon">
+				<object height=25px width=25px type="image/svg+xml" data="strava.svg">
+				</object>
+			</div>
+		</a>
 
-    	<p ><small>© 2025 Violet Sinnarkar | <a style="color: #8F5E99" href="credits.html">Credits</a></small></p>
+		<p><small>© 2025 Violet Sinnarkar | <a style="color: #8F5E99" href="credits.html">Credits</a></small></p>
 
-		</footer>
+	</footer>
 
-	</body>
+</body>
 
 </html>
